--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,13 +1,13 @@
 <style>
-  .keyword-icon,
-  .dice-icon,
-  .unit-rank-icon,
-  .upgrade-type-icon,
-  .range-icon {
+  #root > .keyword-icon,
+  #root > .dice-icon,
+  #root > .unit-rank-icon,
+  #root > .upgrade-type-icon,
+  #root > .range-icon {
     font-size: 64px;
   }
 
-  .attack-dice-icon {
+  #root > .attack-dice-icon {
     width: 32px;
     height: 32px;
   }
